--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -402,8 +402,8 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>Annie Emata</h1>
-        <p class="description">I am an educator </p>
+        <h1>Nipot</h1>
+        <p class="description">I love food </p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
